--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -34,7 +34,7 @@ hook_source = '''
 
 [[plugins]]
 repo = 'Shougo/neosnippet.vim'
-# on_event = 'InsertCharPre'
+on_event = 'InsertCharPre'
 on_ft = ['snippet']
 depends = ['neosnippet-snippets', 'context_filetype.vim']
 hook_source = '''
@@ -105,11 +105,12 @@ hook_source = '''
 repo = 'shima-529/C-prototype.vim'
 on_ft = ['c', 'cpp']
 hook_add = '''
-    augroup c_proto
-        autocmd! BufWritePre,InsertLeave *.c,*.cpp silent! :CPrototypeMake
-    augroup END
-    let g:c_prototype_no_default_keymappings = 1
+    " augroup c_proto
+    "     autocmd! BufWritePre *.c,*.cpp silent! :CPrototypeMake
+    " augroup END
+    " let g:c_prototype_no_default_keymappings = 1
 '''
+
 [[plugins]]
 repo = 'kana/vim-submode'
 on_event = ['VimEnter']
@@ -124,3 +125,13 @@ hook_post_source = '''
     call submode#map('bufmove', 'n', '', '-', '<C-w>-')
 '''
 
+[[plugins]]
+repo = 'thinca/vim-quickrun'
+on_event = ['VimEnter']
+hook_post_source = '''
+    let g:quickrun_config = {}
+    let g:quickrun_config.c = {
+    \   'command': 'gcc',
+    \   'cmdopt': '-lm'
+    \}
+'''
