--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -127,9 +127,15 @@ hook_post_source = '''
 
 [[plugins]]
 repo = 'thinca/vim-quickrun'
-on_event = ['VimEnter']
-hook_post_source = '''
+on_cmd = ['Quickrun']
+hook_source = '''
     let g:quickrun_config = {}
+
+    let g:quickrun_config._ = {
+    \   'runner': 'vimproc',
+    \   'runner/vimproc/updatetime' : 60,
+    \}
+
     let g:quickrun_config.c = {
     \   'command': 'gcc',
     \   'cmdopt': '-lm'
