--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -138,6 +138,6 @@ hook_source = '''
 
     let g:quickrun_config.c = {
     \   'command': 'gcc',
-    \   'cmdopt': '-lm'
+    \   'cmdopt': '-lm -lncurses'
     \}
 '''
