--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -77,6 +77,7 @@ hook_add= '''
     nnoremap <Space>r :Denite -resume<CR>
     nnoremap <Space>b :Denite -mode=normal buffer<CR>
     nnoremap <Space>d :Denite dein<CR>
+    nnoremap <Space>g :Denite grep<CR>
 '''
 
 [[plugins]]
